<resources>
    <string name="app_name">Absolutely Forbidden</string>
    <string name="btn_ok">OK</string>
    <string name="text_about">This is a free, open source, no-ad system tool. If you have any questions, please contact him at darkness463@gmail.com。\n</string>
    <string name="dialog_no_root_title">Can not get root access</string>
    <string name="dialog_no_root_content">Need to get root access to run this app!</string>
    <string name="dialog_loading_app">Loading apps…</string>
    <string name="dialog_launching_app">Processing…</string>
    <string name="about_version">Version: </string>
    <string name="view_on_github">View on github</string>
    <string name="action_text_about">About</string>
    <string name="action_text_enable_all">Enable all</string>
    <string name="action_text_sys_apps">System apps</string>
    <string name="action_text_refresh">Refresh</string>
    <string name="text_disabled">Disabled</string>
    <string name="text_enabled">Enabled</string>
    <string name="text_no_enable_app">No app need to disable</string>
    <string name="text_app_disabled">Disabled</string>
    <string name="text_app_enabled">Enabled</string>
    <string name="text_app_not_disabled">Not disable</string>
    <string name="text_guide_disabled_side">Disabled apps show in this side.</string>
    <string name="text_guide_enable_side">Enabled apps show in this side. Choose apps to disable from this side!</string>
    <string name="text_guide_notice">Notice</string>
    <string name="text_guide_isee">I See</string>
    <string name="text_guide_notice_content">Disabled apps will disappear from your launcher. You can only launch disabled apps in this application for now. In the future you can add shortcuts of disabled apps to your launcher.</string>

</resources>
