<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_about"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.darkness463.absolutelyforbidden.activity.AboutActivity">

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="22sp"
        android:gravity="center"
        />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/tv_version"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="viewGithub"
        android:text="@string/view_on_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
